--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <h2 class="title" hidden>About company</h2>
           <ul class="list about-list">
             <li class="about-item">
+              <div class="about-wrap">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle about-subtitle">Strategy</h3>
               <p class="about-title">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div class="about-wrap">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle about-subtitle">Punctuality</h3>
               <p class="about-title">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div class="about-wrap">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle about-subtitle">Diligence</h3>
               <p class="about-title">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div class="about-wrap">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle about-subtitle">Technologies</h3>
               <p class="about-title">
                 Design practice focused on digital experiences. We bring forth a
@@ -144,6 +164,45 @@
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link link-social" href="https://x.com/">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.linkedin.com/feed//"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -156,6 +215,45 @@
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link link-social" href="https://x.com/">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.linkedin.com/feed//"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -168,6 +266,45 @@
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link link-social" href="https://x.com/">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.linkedin.com/feed//"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -180,7 +317,126 @@
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link link-social" href="https://x.com/">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="link link-social"
+                      href="https://www.linkedin.com/feed//"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Section Customers -->
+      <section class="section customer-section">
+        <div class="container">
+          <h2 class="title customer-title">Customers</h2>
+          <ul class="list customer-list">
+            <li class="customer-item">
+              <a class="customer-link" href="">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56
+                "
+                >
+                  <use href="./images/icons.svg#icon-Logo_1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a class="customer-link" href="">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56
+                "
+                >
+                  <use href="./images/icons.svg#icon-Logo_2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a class="customer-link" href="">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56
+                "
+                >
+                  <use href="./images/icons.svg#icon-Logo_3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a class="customer-link" href="">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56
+                "
+                >
+                  <use href="./images/icons.svg#icon-Logo_4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a class="customer-link" href="">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56
+                "
+                >
+                  <use href="./images/icons.svg#icon-Logo_5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a class="customer-link" href="">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56
+                "
+                >
+                  <use href="./images/icons.svg#icon-Logo_6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -188,14 +444,52 @@
     </main>
     <!-- Section Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="link logo logo-footer" href="./index.html"
-          >Web<span class="logo-down">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="text-wrap">
+          <a class="link logo logo-footer" href="./index.html"
+            >Web<span class="logo-down">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="cmedia-wrap">
+          <p class="footer-undertitle">Social media</p>
+          <ul class="list footer-social">
+            <li class="social-item">
+              <a class="link link-social" href="https://www.instagram.com/">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="link link-social" href="https://x.com/">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="link link-social" href="https://www.facebook.com/">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="link link-social"
+                href="https://www.linkedin.com/feed//"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
